Add some information

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
     <title>Telegram chart</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">Loading...</div>
   </body>
 </html>
