Amend the “loading” message appearance

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <title>Telegram chart</title>
   </head>
   <body>
-    <div id="root">Loading...</div>
+    <div id="root">
+      <div style="margin: 12px; text-align: center;">Loading data...</div>
+    </div>
   </body>
 </html>
